assets/css/amp-editor-story-blocks.css
/* ... */
/*
 * 5. Layers Styling
 */

/*
 * 5.2 Fill layer.
 * Style the fill image & fill video type layers.
 */

.amp-grid-template-fill .editor-block-list__layout > :first-child {
	bottom: 0;
	display: block;
	height: auto;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	width: auto;
	display: flex;
}

.amp-grid-template-fill .editor-block-list__block-edit {
	display: flex;
	flex-direction: column;
}

.amp-grid-template-fill .editor-block-list__block-edit > div:last-child {
	display: flex;
	flex: 1;
}

.amp-grid-template-fill .components-resizable-box__container {
	width: 318px;
	height: 533px;
}

.amp-grid-template-fill .components-disabled {
	width: 318px;
	max-height: 533px;
	overflow: hidden;
}

.amp-grid-template-fill .wp-block-image,
.amp-grid-template-fill .wp-block-video {
	margin-top: 0;
	margin-bottom: 0;
}

.amp-grid-template-fill .components-resizable-box__container img {
	object-fit: cover;
	width: 318px !important;
	height: 533px !important;
}

.amp-grid-template-fill > :not(:first-child) {
	display: none;
}

/*
 * 6. Inserter customisations.
 */

.components-popover.editor-inserter__amp .components-popover__content {
	height: 200px;
}

/* Hide inserter inside of the page when block navigator is visible */
@media (min-width: 961px) {
	div[data-type="amp/amp-story-page"] .block-list-appender {
		display: none;
	}

	.post-type-amp_story .amp-grid-template .editor-block-list__layout:first-of-type {
		padding-top: 24px;
	}
}

/*
 * 7. Block navigator
 * Hides the toggler and shows the navigator by default on large screens.
 */

@media( max-width: 960px) {
	.editor-block-list__block-edit > div > .editor-selectors {
		display: none;
	}
}

@media (min-width: 961px) {
	.post-type-amp_story .editor-post-title__input {
		text-align: center;
	}

	.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout {
		padding-left: 15px;
		padding-right: 15px;
	}

	.post-type-amp_story .editor-writing-flow > div > div {
		display: grid;
	}

	.post-type-amp_story .editor-writing-flow > div > div::before {
		content: '';
		grid-column: 1 / 1;
		grid-row: 1 / 2;
	}

	.post-type-amp_story .editor-writing-flow > div > div > div:first-child {
		grid-column: 2 / 2;
		grid-row: 1 / 1;
	}

	.post-type-amp_story .editor-writing-flow > div > div > .editor-block-list__layout {
		grid-column: 2 / 2;
		grid-row: 2 / 2;
	}

	.components-icon-button.editor-block-navigation {
			display: none;
	}

	#amp-root-navigation {
			position: absolute;
			left: 5px;
			top: 218px;
			width: 300px;
			z-index: 80;
			list-style-type: none;
			padding: 0;
			margin: 0;
	}

	#amp-root-navigation .editor-inserter {
		position: absolute;
		bottom: 100%;
		left: 0;
		width: 100%;
	}

	.post-type-amp_story #amp-root-navigation .components-popover:not(.is-mobile).is-center .components-popover__content {
		transform: translateX( -13% );
	}

	.post-type-amp_story.folded #amp-root-navigation .components-popover:not(.is-mobile):not(.is-middle).is-right .components-popover__content {
		margin-left: -50px;
	}

	/*
		Legend of the magic numbers:
		Sidebar
			Expanded - 160px wide
			Folded - 36px wide
		Settings
			Shown - 280px wide
		Content - 383px (including 15px padding)
		Block Navigation - <= 300px
	*/

	/* Navigator in the context of the open sidebar, settings hidden. */
	.post-type-amp_story .edit-post-layout #amp-root-navigation {
		max-width: calc( 100vw - 160px - 383px );
	}

	.post-type-amp_story .edit-post-layout .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 160px - 315px ) );
	}

	/* Navigator in the context of minimum available space - open sidebar, settings shown. */
	.post-type-amp_story .edit-post-layout.is-sidebar-opened #amp-root-navigation {
		max-width: calc( 100vw - 280px - 160px - 383px );
	}

	.post-type-amp_story .edit-post-layout.is-sidebar-opened .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 280px - 160px - 315px ) );
	}

	/* Navigator in the context of folded sidebar, settings hidden. */
	.post-type-amp_story.folded #amp-root-navigation {
		max-width: calc( 100vw - 36px - 383px );
	}

	.post-type-amp_story.folded .edit-post-visual-editor .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 36px - 315px ) );
	}

	/* Navigator in the context of folded sidebar, settings shown. */
	.post-type-amp_story.folded .edit-post-layout.is-sidebar-opened #amp-root-navigation {
		max-width: calc( 100vw - 36px - 280px - 383px );
	}

	.post-type-amp_story.folded .edit-post-layout.is-sidebar-opened .editor-writing-flow > div > div {
		grid-template-columns: auto minmax( 368px, calc( 100vw - 36px - 280px - 315px ) );
	}

	#amp-root-navigation .editor-block-navigation__list {
		list-style-type: none;
	}

	#amp-root-navigation .components-icon-button .dashicon {
		margin-right: 5px;
	}

	.editor-selectors .component-editor__selector button {
		background: no-repeat left top;
		padding-left: 37px;
		height: 40px;
		margin: 1px 0 1px 4px;
	}

	.editor-selectors .component-editor__selector .components-button:focus {
		box-shadow: none;
	}

	.post-type-amp_story .components-range-control__number {
		width: 60px;
	}
}

/*
 * 8. Block mover
 * Show the block mover by default.
 */

.post-type-amp_story .is-selected .editor-block-mover {
	opacity: 0.7;
	animation: none;
	transition: opacity .3s;
}

.post-type-amp_story .is-selected .editor-block-mover.is-visible {
	opacity: 1;
}

/*
 * 9. General block editor components
 */

.editor-amp-story-page-background {
	display: block;
}

.editor-amp-story-page-background + .is-destructive {
	margin-top: 1em;
}

.editor-amp-story-page-wrap {
	position: relative;
	overflow: hidden;
}

.editor-amp-story-page-video {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	min-width: 100%;
	min-height: 100%;
	object-fit: cover;
	pointer-events: none;
}

#editor-amp-story-page-poster__help {
	margin-top: 0;
}
/* ... */

